Filled the README with relevant data

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ This readme is to readyou
 changed the readme too
 
 made a change in line 4 and commited, we should try the merge conflicts
+
+THIS IS NOT A CHANGELOG!!!1
+(jk it could be)
