--- a/README
+++ b/README
@@ -11,3 +11,11 @@ Mon Dec 26 19:29:32 GTBST 2011
 I [Petros] created a static const map to connect fish types with their generation weights; the map creation itself is defined in organism's private createWeightMap()
 one can tinker with the fish weights there. The rest is implemented in the Ocean class, as genRandType() & createAndAddRandFish().
 One could also transfer genRandType() to the Helper class.
+
+Tue Dec 27 20:39:90 GTBST 2011
+I [Spiros] changed the blue texture to match the view dimension and 16*25 objects,the resolution of 1024*600 does not match actual background dimensions.
+Ocean::kill also delete the Organism from fishMap.
+Modified TODO file, easier to read. We add whatever need to be done even the simple ones...
+Bug found after commit 41b8aa
+
+
