--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 DONE|   *change Ocean::kill instead idx to use a pointer to organism
-****|   *change Ocean::move so before setting new x,y check Ocean::fishMap :
+DONE|   *change Ocean::move so before setting new x,y check Ocean::fishMap :
              -if conlict:
                  _call checker function
                     (*skype*)
              -if not sets new x,y
-****|   *change blue sea texture to match view resolution
+DONE|   *change blue sea texture to match view resolution
 ****|   *optimize textures dimensions in general
 ****|   *limit zoom and move
 ****|   *decide about the world size
@@ -27,9 +27,11 @@ DONE|   *change Ocean::kill instead idx to use a pointer to organism
 ****|   *fix pause screen
 ****|   *add a checkedSprite version of every class
 ****|   *add general itiles and jtiles as in getWorldScreenMapping
-****|   *fix occasional bug
+DONE|   *fix occasional bug
             http://www.qtforum.org/article/31803/passing-pointer-of-object-into-function-crashes.html
             edit: SERIOUS BUG IN COMMIT 41b8a...we should check the code after this commit
             ammend: after debugging it seems that createAndAddRandFish causes sometimes sigsegv.
 ****|   *find a way to publish TODO file without commits........:P
+****|   *Complete Ocean.cpp in comments
+****|   *Optimize rand selection
 ****|   *<add todo>
