--- a/TODO
+++ b/TODO
@@ -33,6 +33,7 @@ DONE|   *fix occasional bug
             ammend: after debugging it seems that createAndAddRandFish causes sometimes sigsegv.
 ****|   *find a way to publish TODO file without commits........:P
 ****|   *Complete Ocean.cpp in comments
-****|   *Optimize rand selection
+DONE|   *Optimize rand selection
 ****|   *THE FUCKING INTERPOLATION FTW!!!!
+****|	*Which Organism members should be protected? Which private?
 ****|   *<add todo>
