--- a/README
+++ b/README
@@ -35,3 +35,9 @@ I [Petros]:
 	* Fixed an endless loop bug (0x02) found in Ocean::collide. That is, each organism shall choose a random direction from a two-dimensional array named Helper::dir[8][2] for eight rounds; after that, the organism is discarded.
 	* fishMap's iterator is now incremented (in Ocean::update) immediately after being evaluated for Ocean::collide(Organism*). That accounts for invalidation after erasing a map's pair (in Ocean::kill). There shouldn't be any issues implementing a bearing mechanism.
 	* Added an Organism::kill() method that decrements each Organism's count after dying. Another method to increment count might be needed.
+	
+Tue Jan 3 0143:31 GTBST 2012
+I [Petros]:
+	* Introduced a pollution system (position[x, y], radius). A static vector<Pollution *> holds the current pollution sources; each source has a lifespan (4th default constructor parameter). No sprites for the moment, just a logging routine. Deletion now should deallocate the pointers to pollution objects, yet we could check for memory leaks.
+	* Ocean::update now also runs tickPollution()
+	* Ocean::populate now checks for object existence before adding a new one at the same spot.
