Fixed (hopefully) iteration over fishMap, memory leaks after Ocean::kill, simple organism functionality

--- a/TODO
+++ b/TODO
@@ -38,6 +38,6 @@ DONE|   *Optimize rand selection
 ****|	*Which Organism members should be protected? Which private?
 ****|	*Check for memory leaks, maybe use a Boost pointer container?
 DONE|   *Fix rand implementation not to produce 0,0 as dx,dy
-****|   *Limit pollution sources with clocks
+****|   *Limit pollution sources with clocks <-- Explain
 ****|   *add pollution shader (possible post-fx fisheye with colorize) check sfml samples
 ****|   *<add todo>
