--- a/README
+++ b/README
@@ -52,3 +52,10 @@ Tue Jan 3 19:02:06 GTBST 2012
 I [Petros]:
 	* Added a draw method for the pollution. Use Pollution::bind(sf::RenderWindow*) to first bind the render window, draw each pollution source, the unbind with Pollution::bind(0)
 	* typedef for std::map<int, Organism*>::iterator
+
+Wed Jan 4 18:10:56 GTBST 2012
+I [Spiros]:
+        * Fixes in pause.h and run.h and retextures.
+        * Added methods for computing and drawing stats for categories.
+        * Added some additional logic (deaths, Consume per week, age, turns)
+        * Added Log Box clickable.
