--- a/TODO
+++ b/TODO
@@ -22,7 +22,7 @@ DONE|       -pollution
                 _placing & interface in general
             -adding Organisms
                 _possible drag&drop?
-****|   *add stats
+DONE|   *add stats
 ****|   *implement dynamic(*skype*) stats tab in the top-right corner
 ****|   *fix pause screen
 ****|   *add a checkedSprite version of every class
@@ -38,6 +38,6 @@ DONE|   *Optimize rand selection
 ****|	*Which Organism members should be protected? Which private?
 ****|	*Check for memory leaks, maybe use a Boost pointer container?
 DONE|   *Fix rand implementation not to produce 0,0 as dx,dy
-****|   *Limit pollution sources with clocks <-- Explain
+DONE|   *Limit pollution sources with clocks <-- Explain
 ****|   *add pollution shader (possible post-fx fisheye with colorize) check sfml samples 
 ****|   *<add todo>
