--- a/README
+++ b/README
@@ -71,3 +71,8 @@ I [Spiros]:
         * Clickable play/pause
         * Controlled Zoom only 2 times
         * Move View with arrows **CHECK TODO**
+
+Thu Jan 5 01:05:06 GTBST 2012
+I [Petros]:
+	* Fixed coords in Helper (x for width, y for height)
+	* Packed Pollution and changed the spreading algorithm
