--- a/README
+++ b/README
@@ -96,3 +96,8 @@ Mon Jan 9 18:43:45 GTBST 2012
 I [Spiros]:
         * Added new pixel-perfect textures!!!
         * Added stats per Organism
+
+Mon Jan 9 20:38:45 GTBST 2012
+I [Spiros]:
+        * Added Follow Camera
+        * Added Log mechanism (non scrolling yet, not sure if needed)
