--- a/doc/askisi1.tex
+++ b/doc/askisi1.tex
@@ -25,7 +25,7 @@
   \item \_DEBUG\_ αν δηλωθεί ο server θα εκτυπώνει παραπάνω πληροφορίες για την λειτουργία του. Δεν είναι ενεργοποιημένο απο default.
  \end{itemize}
  \item Συναρτήσεις ελέγχου fatal και debug
- \item Γενικές μεταβλητές του προγράμματος (σημειωμένες με /*------*/)
+ \item Γενικές μεταβλητές του προγράμματος
 \end{itemize}
 
 \subsection{client.c}
@@ -57,8 +57,9 @@
  \item ότι το κάθε ένα περιμένει διαφορετικούς χρόνους όπως είναι λογικό
  \item γράφουν σε ξεχωριστές shared memories που ελεγχονται με ξεχωριστούς semaphores
  \item έχουν διαφορετικούς semaphores ελέγχου pending->sem\_res για ψήστες, ready->sem\_res για deliveries
+ \item κάθε παραγγελία αναθέτει σε παραπάνω απο ένα ψήστες αλλά σε ένα deliverα
 \end{itemize}
-Γενικά ένας baker/delivery κάνει απλά sleep για τον απαραίτητο χρόνο έπειτα ενημερώνει το orderκάνοντας -1 το status του πατέρα του στην shared memory.Αφού τελειώσει αυξάνει τον αντίστοιχο semaphore sem\_res.
+Γενικά ένας baker/delivery κάνει απλά sleep για τον απαραίτητο χρόνο έπειτα ενημερώνει το order κάνοντας -1 το status του πατέρα του στην shared memory.Αφού τελειώσει αυξάνει τον αντίστοιχο semaphore sem\_res.
 
 \subsubsection{Λίστα παραγγελιών}
 \label{list_info}
@@ -73,7 +74,7 @@
  \item Την στοίβα διαχείρισης μνήμης(\ref{stack}).
  \item Τον semaphore για τον έλεγχο πρόσβασης στο τμήμα
  \item Τους semaphores για τον έλεγχο της στοίβας(\ref{stack}).
- \item Τον semaphore για το resource που ελέχγχει η κάθε λίστα (bakers για την pending, deliverys για την ready)
+ \item Τον semaphore για το resource που ελέχγχει η κάθε λίστα (bakers για την pending, deliveries για την ready)
 \end{itemize}
 
 \subsubsection{Στοίβα διαχείρισης μνήμης}
@@ -82,7 +83,8 @@
 
 \subsubsection{Καθυστερημένες παραγγελίες}
 \label{late}
-Ο έλεγχος των καθυστερημένων παραγγελιών γίνεται χρησιμοποιώντας POSIX timers λόγω των ευκολιών που παρέχουν.
-Με το που ξεκινάει ένα fork παραγγελίας, αφού λάβει την παραγγελία του ξεκινάει και ένας timer. Αυτός ο timer μόλις περάσει tverylong χρόνος θα αναλάβει να στείλει στην παραγγελία ένα sigalarm με το οποίο ενημερώνεται ο client ότι θα πάρει cocacola, και θα ξαναθέσει τον εαυτό του να ξαναστείλει σήμα σε tverylong χρόνο. Για να μην επηρεάζει το σήμα την λειτουργία του προγράμματος και κυρίως να μην διακόπτει τις sem\_wait, γίνεται mask πριν τα critical section του κώδικα. Η ευκολία που παρέχουν οι POSIX timers είναι η συνάρτηση timer\_getoverrun με την οποία ξέρω πόσες φόρες έληξε ο timer ενώ το σήμα ήταν blocked. Έτσι με το που επιτρέπω το σήμα ξανά στέλνω ξεχωριστά στον client όσες κοκα κόλες χρειάζεται, ώστε να είναι όσο πιο ακριβής γίνεται η καθυστέρηση.
+Ο έλεγχος των καθυστερημένων παραγγελιών γίνεται χρησιμοποιώντας POSIX timers μέσα σε κάθε fork παραγγελίας.
+\paragraph{}
+Με το που ξεκινάει ένα fork παραγγελίας, αφού λάβει την παραγγελία του ξεκινάει και ένας timer. Αυτός ο timer μόλις περάσει tverylong χρόνος θα αναλάβει να στείλει στην παραγγελία ένα sigalarm με το οποίο ενημερώνεται ο client ότι θα πάρει cocacola, και θα ξαναθέσει τον εαυτό του να ξαναστείλει σήμα σε tverylong χρόνο. Ο handler του SIGALRM και του SIGINT έχουν ως flags το SA\_RESTART ώστε να μην επηρεάζουν την λειτουργία του κώδικα σε περίπτωση που ένα σήμα διακόψει κάποιο blocking system call.
 
 \end{document}
