Added simd in report

--- a/doc/tex/report.tex
+++ b/doc/tex/report.tex
@@ -25,7 +25,7 @@
 \includegraphics[scale=0.4]{../scrshots/l1.png}
 \includegraphics[scale=0.4]{../scrshots/l2.png}
 \end{center} 
-Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους(dist). Η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα πολλαπλά cache misses. Έτσι η παραλληλοποίηση με openmp βελτιστοποιεί τους υπολογισμούς μειώνοντας τα cache misses.
+Συμπεραίνουμε οτι οι περιοχές που προκαλούν καθυστέρηση είναι αυτές που υπολογίζουν κατ' επανάληψη για όλα τα σημεία την απόσταση τους(dist). Αυτό γίνεται για ολα τα σημεία άρα για μεγάλο αριθμό σημείων αυξάνεται και η πολυπλοκοτητα του προγράμματος. Επίσης η δομή που αποθηκεύει τα σημεία δεσμεύεται στην αρχή του προγράμματος στο heap μεσω malloc που δεν εγγυάται ότι οι διευθύνσεις φυσικής μνήμης θα είναι γειτονικες μεταξυ τους. Η πολλαπλή προσπέλαση όλων των σημείων σειριακά οδηγεί στα πολλαπλά cache misses. Έτσι η παραλληλοποίηση με openmp βελτιστοποιεί τους υπολογισμούς μειώνοντας τα cache misses.
 
 \section{Παραλληλοποίηση}
 \subsection{Με χρήση OpenMP}
@@ -46,8 +46,15 @@
 \end{center}
 
 \subsection{Με χρήση εντολών SIMD}
--ΑΙΤΙΟΛΟΓΗΣΗ ΒΕΛΤΙΣΤΟΠΟΙΗΣΗΣ
--ΜΕΤΡΗΣΕΙΣ
+Λαμβάνοντας υπόψη την ανάλυση της σειριακής έκδοσης του προγράμματος και οι δύο συναρτήσεις σπαταλούν τον μεγαλύτερο χρόνο στην συνάρτηση dist η οποία υπολογίζει την απόσταση δυο σημείων πολλαπλών διαστάσεων.\\
+Ο χρόνος στον οποίο η dist υπολογίζει την απόσταση δυο σημείων μπορεί να βελτιωθεί χρησιμοποιώντας εντολές simd.\\
+Αρχικά υπολογιζώνταν η διαφορά μεταξύ των δύο σημείων σειριακά για κάθε διάστασή τους. Πλέον οι διαστάσεις φορτώνονται ανα 4 ως διάνυσμα σε καταχωρητές του επεξεργαστή έτσι οι πράξεις μεταξύ τους επιταχύνονται.
+
+\section{Συμπεράσματα}
+
+
+
+
 
 
 
